# phish_guard_url_detection

./: ARCHITECTURE.md  EXTENSION_SETUP.md  QUICK-START.md  README.md  TESTING.md  TRAINING_VERIFICATION.md  feature_extractor.py  main.py  model.py  phishguard_scaler.pkl  pyproject.toml  train.py
chrome-extension/: README.md  background.js  blocked.html  content.js  manifest.json  popup.html  popup.js  styles.css  test-sites.js
