[project]
name = "phishguard-ai"
version = "0.1.0"
description = "AI-powered phishing URL detector"
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "python-whois>=0.8.0",
    "tldextract>=5.0.0",
    "flask-cors>=6.0.1",
]
